--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -4,7 +4,7 @@
   line-height: 1;
   padding: .5em;
   position: relative;
-  z-index: 1;
+  z-index: 2; /* above logo */
 }
 
 .flexContainer {
